--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ html {
   font-weight: 600;
 }
 
+.filter {
+  filter: var(--theme-filter);
+}
+
 body {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -58,10 +62,56 @@ body {
   margin-right: 5px;
   filter: var(--theme-filter);
 }
+.app main .search {
+  background-color: var(--elements-background);
+  padding: 10px 0;
+  width: 85vw;
+  max-width: 450px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 4px;
+  box-shadow: 0 0 5px 1px var(--shadow-color);
+}
+.app main .search img {
+  width: 14px;
+  height: auto;
+  margin: 0 20px;
+}
+.app main .search input {
+  background-color: inherit;
+  border: none;
+  color: inherit;
+  width: calc(100% - 14px - 45px);
+}
+.app main .search input:focus {
+  outline: none;
+}
+.app main .search ::placeholder {
+  color: var(--text-color);
+}
+.app main .regionFilter {
+  background-color: var(--elements-background);
+  color: inherit;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0 10px;
+  margin: 20px auto;
+  border-radius: 4px;
+  box-shadow: 0 0 5px 1px var(--shadow-color);
+}
+.app main .regionFilter img {
+  width: 10px;
+  height: auto;
+  margin-left: 30px;
+}
 .app main .countryGrid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 30px;
+  margin: 30px 0;
 }
 .app main .countryGrid .tile {
   background-color: var(--elements-background);
