--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,10 @@ html {
   font-weight: 600;
 }
 
+.filter {
+  filter: var(--theme-filter);
+}
+
 
 body {
   background-color: var(--background-color);
@@ -66,10 +70,64 @@ body {
   }
 
   main {
+    .search {
+      background-color: var(--elements-background);
+      padding: 10px 0;
+      width: 85vw;
+      max-width: 450px;
+      display: flex;
+      align-items: center;
+      margin: 0 auto;
+      border-radius: 4px;
+      box-shadow: 0 0 5px 1px var(--shadow-color);
+
+
+      img {
+        width: 14px;
+        height: auto;
+        margin: 0 20px;
+      }
+
+      input {
+        background-color: inherit;
+        border: none;
+        color: inherit;
+        width: calc(100% - 14px - 45px);
+      }
+
+      input:focus {
+        outline: none;
+      }
+
+      ::placeholder {
+        color: var(--text-color);
+      }
+    }
+
+    .regionFilter {
+      background-color: var(--elements-background);
+      color: inherit;
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      padding: 0 10px;
+      margin: 20px auto;
+      border-radius: 4px;
+      box-shadow: 0 0 5px 1px var(--shadow-color);
+
+      img {
+        width: 10px;
+        height: auto;
+        margin-left: 30px;
+      }
+    }
+
     .countryGrid {
       display: grid;
       grid-template-columns: 1fr;
       gap: 30px;
+      margin: 30px 0;
 
       .tile {
         background-color: var(--elements-background);
