--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
   --background-color: hsl(0, 0%, 98%);
   --input-color: hsl(0, 0%, 52%);
   --elements-background: white;
+  --hover-color: hsl(0, 0%, 80%);
   --theme-filter: invert(0%) sepia(7%) saturate(6%) hue-rotate(323deg) brightness(100%) contrast(100%);
   --shadow-color: hsl(0, 0%, 78%);
 }
@@ -14,6 +15,7 @@
   --background-color: hsl(207, 26%, 17%);
   --input-color: hsl(0, 0%, 52%);
   --elements-background: hsl(209, 23%, 22%);
+  --hover-color: hsl(209, 23%, 30%);
   --theme-filter: invert(100%) sepia(75%) saturate(648%) hue-rotate(182deg) brightness(114%) contrast(101%);
   --shadow-color: hsl(207, 26%, 14%);
 }
@@ -27,7 +29,6 @@ html {
 .filter {
   filter: var(--theme-filter);
 }
-
 
 body {
   background-color: var(--background-color);
@@ -67,6 +68,10 @@ body {
         filter: var(--theme-filter);
       }
     }
+
+    .themeSwitch:hover {
+      cursor: pointer;
+    }
   }
 
   main {
@@ -104,22 +109,68 @@ body {
       }
     }
 
-    .regionFilter {
-      background-color: var(--elements-background);
-      color: inherit;
-      border: none;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      padding: 0 10px;
-      margin: 20px auto;
-      border-radius: 4px;
-      box-shadow: 0 0 5px 1px var(--shadow-color);
+    .regionContainer {
+      width: 155px;
+      margin: 0 auto;
+      position: relative;
 
-      img {
-        width: 10px;
-        height: auto;
-        margin-left: 30px;
+      .regionFilter {
+        background-color: var(--elements-background);
+        color: inherit;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 0 10px;
+        margin: 20px auto;
+        border-radius: 4px;
+        box-shadow: 0 0 5px 1px var(--shadow-color);
+        width: 155px;
+
+        p {
+          text-align: left;
+          width: 95px;
+        }
+
+        img {
+          width: 10px;
+          height: auto;
+          margin-left: 30px;
+        }
+      }
+
+      .regionFilter:hover {
+        cursor: pointer;
+        background-color: var(--hover-color);
+      }
+
+      .regionOptions {
+        background-color: var(--elements-background);
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        border-radius: 4px;
+        box-shadow: 0 0 5px 1px var(--shadow-color);
+        padding: 4px 0;
+
+        .regionChoice {
+          background-color: transparent;
+          border: none;
+          width: 100%;
+          color: inherit;
+          text-align: left;
+          padding: 4px 10px;
+          width: 155px;
+        }
+
+        .regionChoice:hover {
+          cursor: pointer;
+          background-color: var(--hover-color);
+        }
+      }
+
+      .hide {
+        display: none;
       }
     }
 
