--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --hover-color: hsl(0, 0%, 80%);
   --theme-filter: invert(0%) sepia(7%) saturate(6%) hue-rotate(323deg) brightness(100%) contrast(100%);
   --shadow-color: hsl(0, 0%, 78%);
+  --box-shadow: 0 0 5px 2px var(--shadow-color);
 }
 
 [data-theme=dark] {
@@ -17,6 +18,7 @@
   --hover-color: hsl(209, 23%, 30%);
   --theme-filter: invert(100%) sepia(75%) saturate(648%) hue-rotate(182deg) brightness(114%) contrast(101%);
   --shadow-color: hsl(207, 26%, 14%);
+  --box-shadow: 0 0 5px 2px var(--shadow-color);
 }
 
 html {
@@ -41,10 +43,10 @@ body {
   align-items: center;
   background-color: var(--elements-background);
   padding: 20px;
-  box-shadow: 0 0 5px 2px var(--shadow-color);
+  box-shadow: var(--box-shadow);
   margin-bottom: 30px;
 }
-.app header h1 {
+.app header .logo {
   font-size: 16px;
   font-weight: 800;
 }
@@ -76,7 +78,7 @@ body {
   align-items: center;
   margin: 0 auto;
   border-radius: 4px;
-  box-shadow: 0 0 5px 1px var(--shadow-color);
+  box-shadow: var(--box-shadow);
 }
 .app main .search img {
   width: 14px;
@@ -99,6 +101,7 @@ body {
   width: 155px;
   margin: 0 auto;
   position: relative;
+  z-index: 10;
 }
 .app main .regionContainer .regionFilter {
   background-color: var(--elements-background);
@@ -110,7 +113,7 @@ body {
   padding: 0 10px;
   margin: 20px auto;
   border-radius: 4px;
-  box-shadow: 0 0 5px 1px var(--shadow-color);
+  box-shadow: var(--box-shadow);
   width: 155px;
 }
 .app main .regionContainer .regionFilter p {
@@ -132,7 +135,7 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  box-shadow: 0 0 5px 1px var(--shadow-color);
+  box-shadow: var(--box-shadow);
   padding: 4px 0;
 }
 .app main .regionContainer .regionOptions .regionChoice {
@@ -169,7 +172,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 0 0 10px 5px var(--shadow-color);
+  box-shadow: var(--box-shadow);
+  position: relative;
 }
 .app main .countryGrid .tile img {
   height: 225px;
@@ -200,6 +204,69 @@ body {
   font-weight: 800;
   font-size: 16px;
 }
+.app main .countryGrid .tile .psuedoButton {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: var(--hover-color);
+  border: none;
+}
+.app main .countryGrid .tile .psuedoButton:hover {
+  opacity: 0.4;
+}
+.app main .details {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+.app main .details .backButton {
+  background-color: var(--elements-background);
+  border: none;
+  color: inherit;
+  display: flex;
+  width: 100px;
+  align-items: center;
+  border-radius: 4px;
+  box-shadow: var(--box-shadow);
+  margin-bottom: 30px;
+}
+.app main .details .backButton img {
+  height: 18px;
+  width: auto;
+  margin-right: 20px;
+  padding: 0 5px;
+}
+.app main .details .backButton:hover {
+  background-color: var(--hover-color);
+}
+.app main .details .detailsContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.app main .details .detailsContent .detailsInfo .detailsText .left,
+.app main .details .detailsContent .detailsInfo .detailsText .right {
+  margin: 5px;
+}
+.app main .details .detailsContent div .strongText {
+  font-weight: 800;
+}
+.app main .details .detailsContent div .weakText {
+  font-weight: 400;
+  opacity: 0.85;
+}
+.app main .details .detailsContent .borderContainer .borderButton {
+  background-color: var(--elements-background);
+  box-shadow: var(--box-shadow);
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 10px;
+}
+.app main .details .detailsContent .borderContainer .borderButton:hover {
+  background-color: var(--hover-color);
+}
 
 @media (min-width: 690px) {
   .app main .countryGrid {
@@ -209,6 +276,18 @@ body {
 @media (min-width: 1050px) {
   .app main .countryGrid {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .app main .details .detailsContent {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .app main .details .detailsContent .detailsInfo {
+    margin-left: 50px;
+  }
+  .app main .details .detailsContent .detailsInfo .detailsText {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
   }
 }
 @media (min-width: 1410px) {
