--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
   --hover-color: hsl(0, 0%, 80%);
   --theme-filter: invert(0%) sepia(7%) saturate(6%) hue-rotate(323deg) brightness(100%) contrast(100%);
   --shadow-color: hsl(0, 0%, 78%);
+  --box-shadow: 0 0 5px 2px var(--shadow-color);
 }
 
 [data-theme=dark] {
@@ -18,6 +19,7 @@
   --hover-color: hsl(209, 23%, 30%);
   --theme-filter: invert(100%) sepia(75%) saturate(648%) hue-rotate(182deg) brightness(114%) contrast(101%);
   --shadow-color: hsl(207, 26%, 14%);
+  --box-shadow: 0 0 5px 2px var(--shadow-color);
 }
 
 html {
@@ -43,10 +45,10 @@ body {
     align-items: center;
     background-color: var(--elements-background);
     padding: 20px;
-    box-shadow: 0 0 5px 2px var(--shadow-color);
+    box-shadow: var(--box-shadow);
     margin-bottom: 30px;
 
-    h1 {
+    .logo {
       font-size: 16px;
       font-weight: 800;
     }
@@ -84,7 +86,7 @@ body {
       align-items: center;
       margin: 0 auto;
       border-radius: 4px;
-      box-shadow: 0 0 5px 1px var(--shadow-color);
+      box-shadow: var(--box-shadow);
 
 
       img {
@@ -113,6 +115,7 @@ body {
       width: 155px;
       margin: 0 auto;
       position: relative;
+      z-index: 10;
 
       .regionFilter {
         background-color: var(--elements-background);
@@ -124,7 +127,7 @@ body {
         padding: 0 10px;
         margin: 20px auto;
         border-radius: 4px;
-        box-shadow: 0 0 5px 1px var(--shadow-color);
+        box-shadow: var(--box-shadow);
         width: 155px;
 
         p {
@@ -150,7 +153,7 @@ body {
         display: flex;
         flex-direction: column;
         border-radius: 4px;
-        box-shadow: 0 0 5px 1px var(--shadow-color);
+        box-shadow: var(--box-shadow);
         padding: 4px 0;
 
         .regionChoice {
@@ -192,7 +195,8 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        box-shadow: 0 0 10px 5px var(--shadow-color);
+        box-shadow: var(--box-shadow);
+        position: relative;
 
         img {
           height: 225px;
@@ -228,6 +232,88 @@ body {
             font-size: 16px;
           }
         }
+
+        .psuedoButton {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          background-color: var(--hover-color);
+          border: none;
+        }
+
+        .psuedoButton:hover {
+          opacity: 0.4;
+        }
+      }
+    }
+
+    .details {
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+
+      .backButton {
+        background-color: var(--elements-background);
+        border: none;
+        color: inherit;
+        display: flex;
+        width: 100px;
+        align-items: center;
+        border-radius: 4px;
+        box-shadow: var(--box-shadow);
+        margin-bottom: 30px;
+
+        img {
+          height: 18px;
+          width: auto;
+          margin-right: 20px;
+          padding: 0 5px;
+        }
+      }
+
+      .backButton:hover {
+        background-color: var(--hover-color);
+      }
+
+      .detailsContent {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .detailsInfo {
+          .detailsText {
+
+            .left,
+            .right {
+              margin: 5px;
+            }
+          }
+        }
+
+        div .strongText {
+          font-weight: 800;
+        }
+
+        div .weakText {
+          font-weight: 400;
+          opacity: 0.85;
+        }
+
+        .borderContainer {
+          .borderButton {
+            background-color: var(--elements-background);
+            box-shadow: var(--box-shadow);
+            border: none;
+            border-radius: 4px;
+            padding: 10px;
+            margin: 10px;
+          }
+
+          .borderButton:hover {
+            background-color: var(--hover-color);
+          }
+        }
       }
     }
   }
@@ -248,6 +334,23 @@ body {
     main {
       .countryGrid {
         grid-template-columns: 1fr 1fr 1fr;
+      }
+
+      .details {
+        .detailsContent {
+          flex-direction: row;
+          justify-content: center;
+
+          .detailsInfo {
+            margin-left: 50px;
+
+            .detailsText {
+              display: flex;
+              flex-direction: row;
+              gap: 50px;
+            }
+          }
+        }
       }
     }
   }
