--- a/src/index.css
+++ b/src/index.css
@@ -80,10 +80,19 @@ body {
   border-radius: 4px;
   box-shadow: var(--box-shadow);
 }
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .app main .search img {
   width: 14px;
   height: auto;
   margin: 0 20px;
+}
+.app main .search img:hover {
+  animation: spin 0.2s;
+  cursor: pointer;
 }
 .app main .search input {
   background-color: inherit;
@@ -263,6 +272,7 @@ body {
   border-radius: 4px;
   padding: 10px;
   margin: 10px;
+  color: inherit;
 }
 .app main .details .detailsContent .borderContainer .borderButton:hover {
   background-color: var(--hover-color);
