Added common names
- Common name now shows on tile and in details
- border countries is now headed by an h2
- minor CSS fix for better consistency between detail pages

--- a/src/index.scss
+++ b/src/index.scss
@@ -291,6 +291,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100vw;
 
         .detailsInfo {
           .detailsText {
