--- a/src/index.scss
+++ b/src/index.scss
@@ -102,7 +102,7 @@ body {
       }
 
       img:hover {
-        animation: spin 0.2s;
+        animation: spin 0.4s;
         cursor: pointer;
       }
 
@@ -200,7 +200,7 @@ body {
         border-radius: 4px;
         color: inherit;
         width: 300px;
-        height: 400px;
+        height: 440px;
         padding: 0;
         margin: 0 auto;
         display: flex;
@@ -210,7 +210,7 @@ body {
         position: relative;
 
         img {
-          height: 225px;
+          height: 220px;
           max-width: 300px;
           border-top-left-radius: inherit;
           border-top-right-radius: inherit;
@@ -220,7 +220,7 @@ body {
         .tileText {
           padding: 20px;
           width: calc(100% - 40px);
-          height: 175px;
+          height: 220px;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -291,7 +291,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100vw;
+        width: calc(100vw - 32px);
 
         .detailsInfo {
           .detailsText {
