--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
   margin-bottom: 30px;
 }
 .app header .logo {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 800;
 }
 .app header .themeSwitch {
@@ -222,6 +222,7 @@ body {
   opacity: 0;
   background-color: var(--hover-color);
   border: none;
+  color: rgba(0, 0, 0, 0);
 }
 .app main .countryGrid .tile .psuedoButton:hover {
   opacity: 0.4;
