--- a/src/index.scss
+++ b/src/index.scss
@@ -51,7 +51,7 @@ body {
     margin-bottom: 30px;
 
     .logo {
-      font-size: 16px;
+      font-size: 20px;
       font-weight: 800;
     }
 
@@ -253,6 +253,7 @@ body {
           opacity: 0;
           background-color: var(--hover-color);
           border: none;
+          color: rgba(0, 0, 0, 0);
         }
 
         .psuedoButton:hover {
