--- a/src/index.css
+++ b/src/index.css
@@ -227,49 +227,63 @@ body {
 .app main .countryGrid .tile .psuedoButton:hover {
   opacity: 0.4;
 }
-.app main .details {
+
+footer {
+  background-color: var(--elements-background);
+  padding: 10px;
+}
+footer a {
+  color: var(--link-color);
+}
+
+.details {
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  justify-content: space-between;
+  min-height: 100vh;
 }
-.app main .details .backButton {
+.details .backButton {
   background-color: var(--elements-background);
   border: none;
   color: inherit;
   display: flex;
-  width: 100px;
   align-items: center;
+  justify-content: center;
+  width: 100px;
   border-radius: 4px;
   box-shadow: var(--box-shadow);
-  margin-bottom: 30px;
+  margin: 30px;
+  text-decoration: none;
+  padding: 0 10px;
 }
-.app main .details .backButton img {
+.details .backButton img {
   height: 18px;
   width: auto;
-  margin-right: 20px;
+  margin-right: 10px;
   padding: 0 5px;
 }
-.app main .details .backButton:hover {
+.details .backButton:hover {
   background-color: var(--hover-color);
 }
-.app main .details .detailsContent {
+.details .detailsContent {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 15px;
   width: calc(100vw - 32px);
 }
-.app main .details .detailsContent .detailsInfo .detailsText .left,
-.app main .details .detailsContent .detailsInfo .detailsText .right {
+.details .detailsContent .detailsInfo .detailsText .left,
+.details .detailsContent .detailsInfo .detailsText .right {
   margin: 5px;
 }
-.app main .details .detailsContent div .strongText {
+.details .detailsContent div .strongText {
   font-weight: 800;
 }
-.app main .details .detailsContent div .weakText {
+.details .detailsContent div .weakText {
   font-weight: 400;
   opacity: 0.85;
 }
-.app main .details .detailsContent .borderContainer .borderButton {
+.details .detailsContent .borderContainer .borderButton {
   background-color: var(--elements-background);
   box-shadow: var(--box-shadow);
   border: none;
@@ -278,15 +292,8 @@ body {
   margin: 10px;
   color: inherit;
 }
-.app main .details .detailsContent .borderContainer .borderButton:hover {
+.details .detailsContent .borderContainer .borderButton:hover {
   background-color: var(--hover-color);
-}
-.app footer {
-  background-color: var(--elements-background);
-  padding: 10px;
-}
-.app footer a {
-  color: var(--link-color);
 }
 
 @media (min-width: 690px) {
@@ -298,14 +305,14 @@ body {
   .app main .countryGrid {
     grid-template-columns: 1fr 1fr 1fr;
   }
-  .app main .details .detailsContent {
+  .details .detailsContent {
     flex-direction: row;
     justify-content: center;
   }
-  .app main .details .detailsContent .detailsInfo {
+  .details .detailsContent .detailsInfo {
     margin-left: 50px;
   }
-  .app main .details .detailsContent .detailsInfo .detailsText {
+  .details .detailsContent .detailsInfo .detailsText {
     display: flex;
     flex-direction: row;
     gap: 50px;
